# must-rb-pipeline

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml
config/: settings.yaml
config/prompts/: paper_analysis.md  slide_generation.md
pptx_template/: 模板.pptx
src/redbook_pipeline/: __init__.py  cli.py  config.py  pipeline.py
src/redbook_pipeline/models/: __init__.py  paper.py  slide.py
src/redbook_pipeline/skills/: base.py  s01_pdf_parser.py  s02_paper_analyzer.py  s03_slide_generator.py  s04_ppt_builder.py  s05_voice_clone.py  s05b_tts_synthesizer.py  s06_ppt_renderer.py  s07_video_composer.py
src/redbook_pipeline/utils/: libreoffice.py  logger.py  retry.py  volcengine_tts.py
